--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
             <div class="d-flex usuario" style="height: 95px;">
                 <i class="far fa-user mt-3 ml-3" style="font-size: 50px;"></i>
-                <p class="m-0 fuente2 negrita py-3 " style="font-size: 18px;line-height: 1;position: absolute;left: 50%;top: 50%;transform: translate(-50%,-50%);"> Alexander Saavedra Quillahuaman</p>
+                <p class="m-0 fuente2 negrita py-3 " style="font-size: 18px;line-height: 1;position: absolute;left: 50%;top: 50%;transform: translate(-50%,-50%);"> Alexander Saavedra</p>
             </div>
 
         </div>
