--- a/html/paquete.html
+++ b/html/paquete.html
@@ -386,7 +386,7 @@
 
                         <div class=" d-flex text-center" style="color: white;">
                             <i class="mt-2 fas fa-user" style="position: absolute;left: 50%;transform: translate(-50%,0%);font-size: 25px;"></i>
-                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Mike Braum Zukemberg</p>
+                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Usuario 1</p>
                         </div>
 
                     </div>
@@ -411,7 +411,7 @@
 
                         <div class=" d-flex text-center" style="color: white;">
                             <i class="mt-2 fas fa-user" style="position: absolute;left: 50%;transform: translate(-50%,0%);font-size: 25px;"></i>
-                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Mike Braum Zukemberg</p>
+                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Usuario 2</p>
                         </div>
 
                     </div>
@@ -437,7 +437,7 @@
 
                         <div class=" d-flex text-center" style="color: white;">
                             <i class="mt-2 fas fa-user" style="position: absolute;left: 50%;transform: translate(-50%,0%);font-size: 25px;"></i>
-                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Mike Braum Zukemberg</p>
+                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Usuario 3</p>
                         </div>
 
                     </div>
@@ -461,7 +461,7 @@
             </div>
 
             <div class="item-redes">
-                <i class="fab fa-whatsapp-square"></i>
+                <i class="fab fa-whatsapp-square" style="color: green;"></i>
             </div>
 
         </div>
