--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
                                     <p class="fuente1 m-0">I want to know</p>
                                     <a href="./html/paquete.html">
-                                        <button type="button" class=" fuente1  btn btn-warning px-4">Machu Picchu</button>
+                                        <button type="button" class=" fuente1  btn btn-warning px-4">Paisaje 1</button>
                                     </a>
 
                                 </div>
@@ -176,7 +176,7 @@
 
                                     <p class="fuente1 m-0">I want to know</p>
                                     <a href="./html/paquete.html">
-                                        <button type="button" class="fuente1  btn btn-warning padinear">Humantay</button>
+                                        <button type="button" class="fuente1  btn btn-warning padinear">Paisaje 2</button>
                                     </a>
                                 </div>
                             </div>
@@ -189,7 +189,7 @@
 
                 <div class="carousel-item">
 
-                    <div class="imagenizando" style="background-image: url(img/maras.jpg);background-size: cover;background-position: center center; ">
+                    <div class="imagenizando" style="background-image: url(img/marasas.png);background-size: cover;background-position: center bottom; ">
 
                         <div class="imagenizando-item" style="background: rgba(0%, 0%, 0%, 10%);">
 
@@ -198,7 +198,7 @@
 
                                     <p class="fuente1 m-0">I want to know</p>
                                     <a href="./html/paquete.html">
-                                    <button type="button" class="fuente1  btn btn-warning padinear">Maras</button>
+                                    <button type="button" class="fuente1  btn btn-warning padinear">Paisaje 3</button>
                                     </a>
                                 </div>
                             </div>
@@ -211,7 +211,7 @@
 
                 <div class="carousel-item">
 
-                    <div class="imagenizando" style="background-image: url(img/vinicunca.jpg);background-size: cover;background-position: top bottom; ">
+                    <div class="imagenizando" style="background-image: url(img/lagunan.png);background-size: cover;background-position: top top; ">
 
                         <div class="imagenizando-item" style="background: rgba(0%, 0%, 0%, 10%);">
 
@@ -220,7 +220,7 @@
 
                                     <p class="fuente1 m-0">I want to know</p>
                                     <a href="./html/paquete.html">
-                                    <button type="button" class="fuente1  btn btn-warning padinear">Vinicunca</button>
+                                    <button type="button" class="fuente1  btn btn-warning padinear">Paisaje 4</button>
                                     </a>
                                 </div>
                             </div>
@@ -323,12 +323,17 @@
                 <button type="button" class="btn btn-dark fuente1 mb-1" style="font-size: 15px; background-color: black;">Testimonials</button>
             </a>
 
-            <button type="button" class=" btn btn-dark fuente1 mb-1" style="font-size: 15px; background-color: black;position: relative;">
-                <span class="fuente4 mt-1 mr-1 rounded-circle px-1" style="position: absolute;top: 0;right: 0;background-color: rgb(255, 0, 179);font-size: 12px;">10</span>
-                <i class="fi-rr-shopping-cart" style="font-size: 20px;"></i>
-            </button>
+            <a href="./html/carrito.html">
+                <button type="button" class=" btn btn-dark fuente1 mb-1" style="font-size: 15px; background-color: black;position: relative;">
+                    <span class="fuente4 mt-1 mr-1 rounded-circle px-1" style="position: absolute;top: 0;right: 0;background-color: rgb(255, 0, 179);font-size: 12px;">10</span>
+                    <i class="fi-rr-shopping-cart" style="font-size: 20px;"></i>
+                </button>
+            </a>
 
-            <button type="button" class="btn btn-dark fuente1 mb-1" style="font-size: 15px; background-color: black;">profile</button>
+            <a href="./html/user.html">
+                <button type="button" class="btn btn-dark fuente1 mb-1" style="font-size: 15px; background-color: black;">profile</button>
+            </a>
+
             <button type="button" class="btn btn-dark fuente1 mb-1" style="font-size: 15px; background-color: black;">spanish</button>
 
         </div>
@@ -360,7 +365,7 @@
 
                         <div class="info-especial p-2">
 
-                            <p class=" m-0 fuente4">Machu Picchu</p>
+                            <p class=" m-0 fuente4">Lugar numero 1</p>
 
                             <div class=" d-flex">
                                 <i class=" p-1 far fa-clock"></i>
@@ -404,7 +409,7 @@
 
                         <div class="info-especial p-2">
 
-                            <p class=" m-0 fuente4">Machu Picchu</p>
+                            <p class=" m-0 fuente4">Lugar numero 2</p>
 
                             <div class=" d-flex">
                                 <i class=" p-1 far fa-clock"></i>
@@ -452,7 +457,7 @@
 
                         <div class="info-especial p-2">
 
-                            <p class=" m-0 fuente4">Machu Picchu</p>
+                            <p class=" m-0 fuente4">Lugar numero 3</p>
 
                             <div class=" d-flex">
                                 <i class=" p-1 far fa-clock"></i>
@@ -496,7 +501,7 @@
 
                         <div class="info-especial p-2">
 
-                            <p class=" m-0 fuente4">Machu Picchu</p>
+                            <p class=" m-0 fuente4">Lugar numero 4</p>
 
                             <div class=" d-flex">
                                 <i class=" p-1 far fa-clock"></i>
@@ -547,7 +552,7 @@
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Machu Picchu</p>
+                        <p class=" m-0 fuente4">Lugar numero 5</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
@@ -591,7 +596,7 @@
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Machu Picchu</p>
+                        <p class=" m-0 fuente4">Lugar numero 6</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
@@ -654,7 +659,7 @@
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Machu Picchu</p>
+                        <p class=" m-0 fuente4">Especial 1</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
@@ -698,7 +703,7 @@
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Machu Picchu</p>
+                        <p class=" m-0 fuente4">Especial 2</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
@@ -742,7 +747,7 @@
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Machu Picchu</p>
+                        <p class=" m-0 fuente4">Especial 3</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
@@ -786,7 +791,7 @@
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Machu Picchu</p>
+                        <p class=" m-0 fuente4">Especial 4</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
@@ -830,7 +835,7 @@
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Machu Picchu</p>
+                        <p class=" m-0 fuente4">Especial 5</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
@@ -874,7 +879,7 @@
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Machu Picchu</p>
+                        <p class=" m-0 fuente4">Especial 6</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
@@ -918,7 +923,7 @@
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Machu Picchu</p>
+                        <p class=" m-0 fuente4">Especial 7</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
@@ -962,7 +967,7 @@
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Machu Picchu</p>
+                        <p class=" m-0 fuente4">Especial 8</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
@@ -1034,7 +1039,7 @@
 
                         <div class=" d-flex text-center" style="color: white;">
                             <i class="mt-2 fas fa-user" style="position: absolute;left: 50%;transform: translate(-50%,0%);font-size: 25px;"></i>
-                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Mike Braum Zukemberg</p>
+                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Usuario 1</p>
                         </div>
 
                     </div>
@@ -1059,7 +1064,7 @@
 
                         <div class=" d-flex text-center" style="color: white;">
                             <i class="mt-2 fas fa-user" style="position: absolute;left: 50%;transform: translate(-50%,0%);font-size: 25px;"></i>
-                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Mike Braum Zukemberg</p>
+                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Usuario 2</p>
                         </div>
 
                     </div>
@@ -1085,7 +1090,7 @@
 
                         <div class=" d-flex text-center" style="color: white;">
                             <i class="mt-2 fas fa-user" style="position: absolute;left: 50%;transform: translate(-50%,0%);font-size: 25px;"></i>
-                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Mike Braum Zukemberg</p>
+                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Usuario 3</p>
                         </div>
 
                     </div>
@@ -1111,7 +1116,7 @@
 
                         <div class=" d-flex text-center" style="color: white;">
                             <i class="mt-2 fas fa-user" style="position: absolute;left: 50%;transform: translate(-50%,0%);font-size: 25px;"></i>
-                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Mike Braum Zukemberg</p>
+                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Usuario 4</p>
                         </div>
 
                     </div>
@@ -1137,7 +1142,7 @@
 
                         <div class=" d-flex text-center" style="color: white;">
                             <i class="mt-2 fas fa-user" style="position: absolute;left: 50%;transform: translate(-50%,0%);font-size: 25px;"></i>
-                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Mike Braum Zukemberg</p>
+                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Usuario 5</p>
                         </div>
 
                     </div>
@@ -1163,7 +1168,7 @@
 
                         <div class=" d-flex text-center" style="color: white;">
                             <i class="mt-2 fas fa-user" style="position: absolute;left: 50%;transform: translate(-50%,0%);font-size: 25px;"></i>
-                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Mike Braum Zukemberg</p>
+                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Usuario 6</p>
                         </div>
 
                     </div>
