--- a/html/carrito.html
+++ b/html/carrito.html
@@ -58,7 +58,7 @@
 <body>
 
     <!-- HEADER -->
-    <div class="container-fluid header-secondary headersito" style="background-color: white;">
+    <div class="container-fluid header-secondary headersito" style="background-color: white;border-bottom: 1px solid black;">
         <div class="container px-0 ">
             <div class="grid-header">
 
@@ -195,7 +195,7 @@
                             <tr>
 
                                 <td class=" py-2 px-1">
-                                    <div class="" style="background-image: url(../img/maras.jpg);width: 60px;height: 60px;background-size: cover;background-position: center center;border-radius: 8px; box-shadow: 5px 5px 5px #8d8d8d;">
+                                    <div class="" style="background-image: url(../img/lagunan.png);width: 60px;height: 60px;background-size: cover;background-position: center center;border-radius: 8px; box-shadow: 5px 5px 5px #8d8d8d;">
 
                                     </div>
                                 </td>
@@ -287,7 +287,7 @@
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Machu Picchu</p>
+                        <p class=" m-0 fuente4">Especial 1</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
@@ -331,7 +331,7 @@
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Machu Picchu</p>
+                        <p class=" m-0 fuente4">Especial 2</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
@@ -375,7 +375,7 @@
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Machu Picchu</p>
+                        <p class=" m-0 fuente4">Especial 3</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
@@ -419,7 +419,7 @@
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Machu Picchu</p>
+                        <p class=" m-0 fuente4">Especial 4</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
@@ -463,7 +463,7 @@
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Machu Picchu</p>
+                        <p class=" m-0 fuente4">Especial 5</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
@@ -507,7 +507,7 @@
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Machu Picchu</p>
+                        <p class=" m-0 fuente4">Especial 6</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
@@ -551,7 +551,7 @@
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Machu Picchu</p>
+                        <p class=" m-0 fuente4">Especial 7</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
@@ -595,7 +595,7 @@
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Machu Picchu</p>
+                        <p class=" m-0 fuente4">Especial 8</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
