--- a/html/about.html
+++ b/html/about.html
@@ -64,7 +64,7 @@
                 <!-- IMAGEN LOGO -->
                 <div class="item-header raton">
                     <a href="../index.html">
-                        <img src="../img/Logo Puma.png" alt="" class="img-fluid">
+                        <img src="../img/logo.png" alt="" class="img-fluid">
                     </a>
                 </div>
 
@@ -185,7 +185,7 @@
                     <div class=" panorama foto-testi" style="background-image:linear-gradient(
                         rgba(0, 0, 0, 0.1),
                         rgba(0, 0, 0, 0.2)
-                      ), url(../img/hernan.jpg);">
+                      ), url(../img/admin2.jpg);">
 
                         <div class=" el-testimonio" style="transition: all 1s;background-color: rgba(0%, 0%, 0%, 60%);color: white;border-top-right-radius: 15px;border-top-left-radius: 15px;">
                             <p class="contenido-testificado m-0 fuente2 p-3">Im not a perfect person, theres many thing i wish i didnt do, but i continue learning, i never meant to do those things to you, and so i have to say before i go, that i just want you to know, i found the reason forme, to change
@@ -211,7 +211,7 @@
                     <div class=" panorama foto-testi" style="background-image:linear-gradient(
                         rgba(0, 0, 0, 0.1),
                         rgba(0, 0, 0, 0.2)
-                      ), url(../img/alex1.jpg);">
+                      ), url(../img/admin1.jpg);">
 
                         <div class=" el-testimonio" style="transition: all 1s;background-color: rgba(0%, 0%, 0%, 60%);color: white;border-top-right-radius: 15px;border-top-left-radius: 15px;">
                             <p class="contenido-testificado m-0 fuente2 p-3">Im not a perfect person, theres many thing i wish i didnt do, but i continue learning, i never meant to do those things to you, and so i have to say before i go, that i just want you to know, i found the reason forme, to change
