--- a/html/blog.html
+++ b/html/blog.html
@@ -64,7 +64,7 @@
                 <!-- IMAGEN LOGO -->
                 <div class="item-header raton">
                     <a href="../index.html">
-                        <img src="../img/Logo Puma.png" alt="" class="img-fluid">
+                        <img src="../img/logo.png" alt="" class="img-fluid">
                     </a>
                 </div>
 
@@ -166,7 +166,7 @@
                                     <div class=" imagenizando photo-animation tamanioC" style="background-image:linear-gradient(
                                     rgba(0, 0, 0, 0.1),
                                     rgba(0, 0, 0, 0.3)
-                                  ), url(../img/picapica.webp);background-size: cover;background-position: left; ">
+                                  ), url(../img/blog1.webp);background-size: cover;background-position: left; ">
 
 
 
