--- a/html/paquete.html
+++ b/html/paquete.html
@@ -64,7 +64,7 @@
 
                 <!-- IMAGEN LOGO -->
                 <div class="item-header raton">
-                    <img src="../img/Logo Puma.png" alt="" class="img-fluid">
+                    <img src="../img/logo.png" alt="" class="img-fluid">
                 </div>
 
                 <!-- NOMBRE LOGO -->
@@ -163,7 +163,7 @@
                                 <!-- IMAGEN 1 -->
                                 <div class="carousel-item active">
 
-                                    <div class="imagenizando photo-animation tamanioC" style="background-image: url(../img/machupicchu.png);background-size: cover;background-position: left; ">
+                                    <div class="imagenizando photo-animation tamanioC" style="background-image: url(../img/banner1.jpg);background-size: cover;background-position: left; ">
 
 
 
@@ -174,7 +174,7 @@
                                 <!-- IMAGEN 2 -->
                                 <div class="carousel-item">
 
-                                    <div class="imagenizando photo-animation tamanioC" style="background-image: url(../img/humantay.png);background-size: cover;background-position: left; ">
+                                    <div class="imagenizando photo-animation tamanioC" style="background-image: url(../img/banner2.jpg);background-size: cover;background-position: left; ">
 
 
 
@@ -185,7 +185,7 @@
                                 <!-- IMAGEN 3 -->
                                 <div class="carousel-item">
 
-                                    <div class="imagenizando photo-animation tamanioC" style="background-image: url(../img/testimonio3.png);background-size: cover;background-position: left; ">
+                                    <div class="imagenizando photo-animation tamanioC" style="background-image: url(../img/banner3.jpg);background-size: cover;background-position: left; ">
 
 
 
@@ -196,7 +196,7 @@
                                 <!-- IMAGEN 4 -->
                                 <div class="carousel-item">
 
-                                    <div class="imagenizando photo-animation tamanioC" style="background-image: url(../img/atardecer.png);background-size: cover;background-position: left; ">
+                                    <div class="imagenizando photo-animation tamanioC" style="background-image: url(../img/banner4.png);background-size: cover;background-position: left; ">
 
 
 
@@ -224,7 +224,7 @@
                 <div class="item-info-paquete pl-md-4">
 
                     <!-- Boton agregar -->
-                    <button type="button" class="animated p-3 btn btn-success fuente4 mt-3 mt-md-0">
+                    <button type="button" id="miBoton" class=" animated p-3 btn btn-success fuente4 mt-3 mt-md-0">
                         add to shopping cart
                     </button>
 
@@ -373,7 +373,7 @@
                     <div class=" panorama foto-testi" style="background-image:linear-gradient(
                         rgba(0, 0, 0, 0.1),
                         rgba(0, 0, 0, 0.05)
-                      ), url(../img/testimonio.png);">
+                      ), url(../img/testimonio1.png);">
 
                         <div class=" el-testimonio" style="transition: all 1s;background-color: rgba(0%, 0%, 0%, 60%);color: white;border-top-right-radius: 15px;border-top-left-radius: 15px;">
                             <p class="contenido-testificado m-0 fuente2 p-3">Im not a perfect person, theres many thing i wish i didnt do, but i continue learning, i never meant to do those things to you, and so i have to say before i go, that i just want you to know, i found the reason forme, to change
@@ -386,7 +386,7 @@
 
                         <div class=" d-flex text-center" style="color: white;">
                             <i class="mt-2 fas fa-user" style="position: absolute;left: 50%;transform: translate(-50%,0%);font-size: 25px;"></i>
-                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Usuario 1</p>
+                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Emily Johnson</p>
                         </div>
 
                     </div>
@@ -411,7 +411,7 @@
 
                         <div class=" d-flex text-center" style="color: white;">
                             <i class="mt-2 fas fa-user" style="position: absolute;left: 50%;transform: translate(-50%,0%);font-size: 25px;"></i>
-                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Usuario 2</p>
+                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">David Williams</p>
                         </div>
 
                     </div>
@@ -437,7 +437,7 @@
 
                         <div class=" d-flex text-center" style="color: white;">
                             <i class="mt-2 fas fa-user" style="position: absolute;left: 50%;transform: translate(-50%,0%);font-size: 25px;"></i>
-                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Usuario 3</p>
+                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Jessica Lee</p>
                         </div>
 
                     </div>
@@ -474,7 +474,7 @@
     </footer>
 
     <script src="../js/script.js"></script>
-    <script src="js/carrito.js"></script>
+    <script src="../js/carrito.js"></script>
 
 </body>
 
