--- a/html/user.html
+++ b/html/user.html
@@ -64,7 +64,7 @@
                 <!-- IMAGEN LOGO -->
                 <div class="item-header raton">
                     <a href="../index.html">
-                        <img src="../img/Logo Puma.png" alt="" class="img-fluid">
+                        <img src="../img/logo.png" alt="" class="img-fluid">
                     </a>
                 </div>
 
@@ -172,14 +172,14 @@
                         <!-- TUR 4 -->
                         <div class="item-user-tours ">
                             <a href="paquete.html" style="color: black;">
-                                <p class="m-0 fuente6 text-center p-2 " style="font-size: 10px;">Machu picchu </p>
+                                <p class="m-0 fuente6 text-center p-2 " style="font-size: 10px;">Machu picchu</p>
                             </a>
                         </div>
 
                         <!-- TUR 4 -->
                         <div class="item-user-tours ">
                             <a href="paquete.html" style="color: black;">
-                                <p class="m-0 fuente6 text-center p-2 " style="font-size: 10px;">Humantay Lake </p>
+                                <p class="m-0 fuente6 text-center p-2 " style="font-size: 10px;">Maras - Salineras </p>
                             </a>
                         </div>
 
@@ -188,19 +188,19 @@
 
                 <div class="item-user relative">
                     <div class="">
-                        <p class="text-center fuente6 absolute centrado" style="font-size: 20px;">10 persons <br> 4 days</p>
+                        <p class="text-center fuente6 absolute centrado" style="font-size: 20px;">2 persons <br> 3 days</p>
                     </div>
                 </div>
 
                 <div class="item-user relative">
                     <div class="d-flex flex-column">
-                        <p class="text-center fuente6 absolute centrado" style="font-size: 20px;">Check in <br> 08/28/2021</p>
+                        <p class="text-center fuente6 absolute centrado" style="font-size: 20px;">Check in <br> 08/28/2023</p>
                     </div>
                 </div>
 
                 <div class="item-user relative">
                     <div class="">
-                        <p class="fuente6 absolute centrado" style="font-size: 20px;">1000$</p>
+                        <p class="fuente6 absolute centrado" style="font-size: 20px;">1150$</p>
                     </div>
                 </div>
 
@@ -232,8 +232,7 @@
                         <div class="form-group">
                             <select class="form-control" id="sel1">
                                 <option class="fuente6" value="">Machu Picchu</option>
-                                <option class="fuente6" value="">Machu Picchu</option> 
-                                <option class="fuente6" value="">Machu Picchu</option>
+                                <option class="fuente6" value="">Maras - Salineras</option> 
                               </select>
                         </div>
                     </div>
