--- a/html/carrito.html
+++ b/html/carrito.html
@@ -51,6 +51,10 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
+    <!-- SWEET ALERT -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.5/dist/sweetalert2.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.5/dist/sweetalert2.min.js"></script>
+
 
 
 </head>
@@ -65,7 +69,7 @@
                 <!-- IMAGEN LOGO -->
                 <div class="item-header raton">
                     <a href="../index.html">
-                        <img src="../img/Logo Puma.png" alt="" class="img-fluid">
+                        <img src="../img/logo.png" alt="" class="img-fluid">
                     </a>
                 </div>
 
@@ -167,21 +171,21 @@
                             <tr>
 
                                 <td class=" py-2 px-1">
-                                    <div class="" style="background-image: url(../img/machupicchu.png);width: 60px;height: 60px;background-size: cover;background-position: center center;border-radius: 8px; box-shadow: 5px 5px 5px #8d8d8d;">
+                                    <div class="" style="background-image: url(../img/top1.jpg);width: 60px;height: 60px;background-size: cover;background-position: center center;border-radius: 8px; box-shadow: 5px 5px 5px #8d8d8d;">
 
                                     </div>
                                 </td>
 
                                 <td class="fuente6" style="position: relative;">
-                                    <p class="p-0 m-0 fuente6 absolute centrado" style="font-size: 13px;">Machu Picchu</p>
+                                    <p class="p-0 m-0 fuente6 absolute centrado" style="font-size: 13px;">Maras - Salineras</p>
                                 </td>
 
                                 <td class="relative fuente6">
-                                    <p class="absolute centrado fuente6" style="font-size: 13px;">10</p>
+                                    <p class="absolute centrado fuente6" style="font-size: 13px;">1</p>
                                 </td>
 
                                 <td class="relative fuente6">
-                                    <p class="absolute centrado fuente6" style="font-size: 13px;">1000$</p>
+                                    <p class="absolute centrado fuente6" style="font-size: 13px;">500$</p>
                                 </td>
 
                                 <td class="relative">
@@ -195,21 +199,21 @@
                             <tr>
 
                                 <td class=" py-2 px-1">
-                                    <div class="" style="background-image: url(../img/lagunan.png);width: 60px;height: 60px;background-size: cover;background-position: center center;border-radius: 8px; box-shadow: 5px 5px 5px #8d8d8d;">
+                                    <div class="" style="background-image: url(../img/top2.png);width: 60px;height: 60px;background-size: cover;background-position: center center;border-radius: 8px; box-shadow: 5px 5px 5px #8d8d8d;">
 
                                     </div>
                                 </td>
 
                                 <td class="fuente6" style="position: relative;">
-                                    <p class="p-0 m-0 fuente6 absolute centrado" style="font-size: 13px;">Humantay</p>
+                                    <p class="p-0 m-0 fuente6 absolute centrado" style="font-size: 13px;">Machupicchu</p>
                                 </td>
 
                                 <td class="relative fuente6">
-                                    <p class="absolute centrado fuente6" style="font-size: 13px;">10</p>
+                                    <p class="absolute centrado fuente6" style="font-size: 13px;">2</p>
                                 </td>
 
                                 <td class="relative fuente6">
-                                    <p class="absolute centrado fuente6" style="font-size: 13px;">1000$</p>
+                                    <p class="absolute centrado fuente6" style="font-size: 13px;">650$</p>
                                 </td>
 
                                 <td class="relative">
@@ -231,7 +235,7 @@
                 <div class="item-carrito mb-4 mt-sm-3 mt-md-0">
 
                     <div class="container">
-                        <form action="/action_page.php" class="was-validated">
+                        <!-- <form  class="was-validated"> -->
                             <div class="input-group form-group">
                                 <label class="fuente6 p-2" for="pwd">Check in:</label>
                                 <div style="width: 200px;">
@@ -259,11 +263,11 @@
                             <div class="mb-3">
                                 <p class="m-0 fuente6">Total tours: 2</p>
                                 <p class="m-0 fuente6">Total persons: 2</p>
-                                <p class="m-0 fuente6">Total Price: 2000$</p>
+                                <p class="m-0 fuente6">Total Price: 1150$</p>
                             </div>
 
-                            <button type="submit" class="fuente6 btn btn-success p-2">Booking</button>
-                        </form>
+                            <button id="reservar" class="fuente6 btn btn-success p-2">Booking</button>
+                        <!-- </form> -->
                     </div>
 
                 </div>
@@ -283,7 +287,7 @@
                 <div class="item-especial panorama" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
-                  ),url(../img/atardecer.png);">
+                  ),url(../img/especial1.png);">
 
                     <div class="info-especial p-2">
 
@@ -327,7 +331,7 @@
                 <div class="item-especial panorama" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
-                  ),url(../img/marastop.jpg);">
+                  ),url(../img/especial2.png);">
 
                     <div class="info-especial p-2">
 
@@ -371,7 +375,7 @@
                 <div class="item-especial panorama" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
-                  ),url(../img/oso.png);">
+                  ),url(../img/especial3.png);">
 
                     <div class="info-especial p-2">
 
@@ -415,7 +419,7 @@
                 <div class="item-especial panorama" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
-                  ),url(../img/cuervo.png);">
+                  ),url(../img/especial4.png);">
 
                     <div class="info-especial p-2">
 
@@ -459,7 +463,7 @@
                 <div class="item-especial panorama" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
-                  ),url(../img/tree.png);">
+                  ),url(../img/especial5.png);">
 
                     <div class="info-especial p-2">
 
@@ -503,7 +507,7 @@
                 <div class="item-especial panorama" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
-                  ),url(../img/draf.png);">
+                  ),url(../img/especial6.png);">
 
                     <div class="info-especial p-2">
 
@@ -547,7 +551,7 @@
                 <div class="item-especial panorama" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
-                  ),url(../img/machupicchu.png);">
+                  ),url(../img/especial7.png);">
 
                     <div class="info-especial p-2">
 
@@ -591,7 +595,7 @@
                 <div class="item-especial panorama" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
-                  ),url(../img/humantay.png);">
+                  ),url(../img/especial8.png);">
 
                     <div class="info-especial p-2">
 
