--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <!-- IMAGEN LOGO -->
                 <div class="item-header raton">
                     <a href="index.html">
-                        <img src="img/Logo Puma.png" alt="" class="img-fluid">
+                        <img src="img/logo.png" alt="" class="img-fluid">
                     </a>
                 </div>
 
@@ -144,16 +144,15 @@
 
                 <div class="carousel-item active">
 
-                    <div class="imagenizando" style="background-image: url(img/machupicchu.png);background-size: cover;background-position: top botton; ">
+                    <div class="imagenizando" style="background-image: url(img/banner1.jpg);background-size: cover;background-position: top; ">
 
                         <div class="imagenizando-item" style="background: rgba(0%, 0%, 0%, 10%);">
 
                             <div class="container">
                                 <div class="container-fluid text-center">
 
-                                    <p class="fuente1 m-0">I want to know</p>
                                     <a href="./html/paquete.html">
-                                        <button type="button" class=" fuente1  btn btn-warning px-4">Paisaje 1</button>
+                                        <button type="button" class=" fuente1  btn  padinear">Banner 1</button>
                                     </a>
 
                                 </div>
@@ -167,16 +166,15 @@
 
                 <div class="carousel-item">
 
-                    <div class="imagenizando" style="background-image: url(img/humantay.png);background-size: cover;background-position: top bottom; ">
+                    <div class="imagenizando" style="background-image: url(img/banner2.jpg);background-size: cover;background-position: bottom; ">
 
                         <div class="imagenizando-item" style="background: rgba(0%, 0%, 0%, 10%);">
 
                             <div class="container">
                                 <div class="container-fluid text-center">
 
-                                    <p class="fuente1 m-0">I want to know</p>
                                     <a href="./html/paquete.html">
-                                        <button type="button" class="fuente1  btn btn-warning padinear">Paisaje 2</button>
+                                        <button type="button" class="fuente1  btn  padinear">Banner 2</button>
                                     </a>
                                 </div>
                             </div>
@@ -189,16 +187,15 @@
 
                 <div class="carousel-item">
 
-                    <div class="imagenizando" style="background-image: url(img/marasas.png);background-size: cover;background-position: center bottom; ">
+                    <div class="imagenizando" style="background-image: url(img/banner3.jpg);background-size: cover;background-position: bottom ; ">
 
                         <div class="imagenizando-item" style="background: rgba(0%, 0%, 0%, 10%);">
 
                             <div class="container">
                                 <div class="container-fluid text-center">
 
-                                    <p class="fuente1 m-0">I want to know</p>
                                     <a href="./html/paquete.html">
-                                    <button type="button" class="fuente1  btn btn-warning padinear">Paisaje 3</button>
+                                    <button type="button" class="fuente1  btn  padinear">Banner 3</button>
                                     </a>
                                 </div>
                             </div>
@@ -211,16 +208,15 @@
 
                 <div class="carousel-item">
 
-                    <div class="imagenizando" style="background-image: url(img/lagunan.png);background-size: cover;background-position: top top; ">
+                    <div class="imagenizando" style="background-image: url(img/banner4.png);background-size: cover;background-position: top ; ">
 
                         <div class="imagenizando-item" style="background: rgba(0%, 0%, 0%, 10%);">
 
                             <div class="container">
                                 <div class="container-fluid text-center">
 
-                                    <p class="fuente1 m-0">I want to know</p>
                                     <a href="./html/paquete.html">
-                                    <button type="button" class="fuente1  btn btn-warning padinear">Paisaje 4</button>
+                                    <button type="button" class="fuente1  btn  padinear">Banner 4</button>
                                     </a>
                                 </div>
                             </div>
@@ -259,7 +255,7 @@
     </div>
 
     <!-- MENU CENTRADO CENTER -->
-    <div name="menu" id="menu" class="container-fluid  img-fluid" style="background-image: url(img/llamita.jpg);background-size: cover;background-position: center center;">
+    <div name="menu" id="menu" class="container-fluid  img-fluid" style="background-image: url(img/menu.jpg);background-size: cover;background-position: center center;">
         <div class="container sobre-llamita " style="background-color: rgba(0%, 0%, 0%, 50%);">
 
             <h1 class="fuente3 negrita m-0 text-center " style="color: white;">Menu</h1>
@@ -361,7 +357,7 @@
                     <div class="item-top top1" style="background-image: linear-gradient(
                         rgba(0, 0, 0, 0.1),
                         rgba(0, 0, 0, 0.2)
-                      ), url(img/marastop.jpg);position: relative;">
+                      ), url(img/top1.jpg);position: relative;">
 
                         <div class="info-especial p-2">
 
@@ -405,7 +401,7 @@
                     <div class="item-top top2" style="background-image: linear-gradient(
                         rgba(0, 0, 0, 0.1),
                         rgba(0, 0, 0, 0.2)
-                      ), url(img/machupicchu.png);position: relative;">
+                      ), url(img/top2.png);position: relative;">
 
                         <div class="info-especial p-2">
 
@@ -453,7 +449,7 @@
                     <div class="item-top top3" style="background-image: linear-gradient(
                         rgba(0, 0, 0, 0.1),
                         rgba(0, 0, 0, 0.2)
-                      ), url(img/humantay.png);position: relative;">
+                      ), url(img/top3.png);position: relative;">
 
                         <div class="info-especial p-2">
 
@@ -497,7 +493,7 @@
                     <div class="item-top top4" style="background-image: linear-gradient(
                         rgba(0, 0, 0, 0.1),
                         rgba(0, 0, 0, 0.2)
-                      ), url(img/toptop.png);position: relative;">
+                      ), url(img/top4.jpg);position: relative;">
 
                         <div class="info-especial p-2">
 
@@ -548,7 +544,7 @@
                 <div class="subtop subtop1" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
-                  ), url(img/tophouse.png);position: relative;">
+                  ), url(img/top5.jpg);position: relative;">
 
                     <div class="info-especial p-2">
 
@@ -592,7 +588,7 @@
                 <div class="subtop subtop2" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
-                  ), url(img/perrito.png);position: relative;">
+                  ), url(img/top6.jpg);position: relative;">
 
                     <div class="info-especial p-2">
 
@@ -655,7 +651,7 @@
                 <div class="item-especial panorama" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
-                  ),url(img/atardecer.png);">
+                  ),url(img/especial1.png);">
 
                     <div class="info-especial p-2">
 
@@ -699,7 +695,7 @@
                 <div class="item-especial panorama" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
-                  ),url(img/marastop.jpg);">
+                  ),url(img/especial2.png);">
 
                     <div class="info-especial p-2">
 
@@ -743,7 +739,7 @@
                 <div class="item-especial panorama" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
-                  ),url(img/oso.png);">
+                  ),url(img/especial3.png);">
 
                     <div class="info-especial p-2">
 
@@ -787,7 +783,7 @@
                 <div class="item-especial panorama" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
-                  ),url(img/cuervo.png);">
+                  ),url(img/especial4.png);">
 
                     <div class="info-especial p-2">
 
@@ -831,7 +827,7 @@
                 <div class="item-especial panorama" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
-                  ),url(img/tree.png);">
+                  ),url(img/especial5.png);">
 
                     <div class="info-especial p-2">
 
@@ -875,7 +871,7 @@
                 <div class="item-especial panorama" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
-                  ),url(img/draf.png);">
+                  ),url(img/especial6.png);">
 
                     <div class="info-especial p-2">
 
@@ -919,7 +915,7 @@
                 <div class="item-especial panorama" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
-                  ),url(img/machupicchu.png);">
+                  ),url(img/especial7.png);">
 
                     <div class="info-especial p-2">
 
@@ -963,7 +959,7 @@
                 <div class="item-especial panorama" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
-                  ),url(img/humantay.png);">
+                  ),url(img/especial8.png);">
 
                     <div class="info-especial p-2">
 
@@ -1026,7 +1022,7 @@
                     <div class=" panorama foto-testi" style="background-image:linear-gradient(
                         rgba(0, 0, 0, 0.1),
                         rgba(0, 0, 0, 0.05)
-                      ), url(img/testimonio.png);">
+                      ), url(img/testimonio1.png);">
 
                         <div class=" el-testimonio" style="transition: all 1s;background-color: rgba(0%, 0%, 0%, 60%);color: white;border-top-right-radius: 15px;border-top-left-radius: 15px;">
                             <p class="contenido-testificado m-0 fuente2 p-3">Im not a perfect person, theres many thing i wish i didnt do, but i continue learning, i never meant to do those things to you, and so i have to say before i go, that i just want you to know, i found the reason forme, to change
@@ -1039,7 +1035,7 @@
 
                         <div class=" d-flex text-center" style="color: white;">
                             <i class="mt-2 fas fa-user" style="position: absolute;left: 50%;transform: translate(-50%,0%);font-size: 25px;"></i>
-                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Usuario 1</p>
+                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Emily Johnson</p>
                         </div>
 
                     </div>
@@ -1064,7 +1060,7 @@
 
                         <div class=" d-flex text-center" style="color: white;">
                             <i class="mt-2 fas fa-user" style="position: absolute;left: 50%;transform: translate(-50%,0%);font-size: 25px;"></i>
-                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Usuario 2</p>
+                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">David Williams</p>
                         </div>
 
                     </div>
@@ -1090,7 +1086,7 @@
 
                         <div class=" d-flex text-center" style="color: white;">
                             <i class="mt-2 fas fa-user" style="position: absolute;left: 50%;transform: translate(-50%,0%);font-size: 25px;"></i>
-                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Usuario 3</p>
+                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Jessica Lee</p>
                         </div>
 
                     </div>
@@ -1116,7 +1112,7 @@
 
                         <div class=" d-flex text-center" style="color: white;">
                             <i class="mt-2 fas fa-user" style="position: absolute;left: 50%;transform: translate(-50%,0%);font-size: 25px;"></i>
-                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Usuario 4</p>
+                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Michael Davis</p>
                         </div>
 
                     </div>
@@ -1142,7 +1138,7 @@
 
                         <div class=" d-flex text-center" style="color: white;">
                             <i class="mt-2 fas fa-user" style="position: absolute;left: 50%;transform: translate(-50%,0%);font-size: 25px;"></i>
-                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Usuario 5</p>
+                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Sarah Brown</p>
                         </div>
 
                     </div>
@@ -1168,7 +1164,7 @@
 
                         <div class=" d-flex text-center" style="color: white;">
                             <i class="mt-2 fas fa-user" style="position: absolute;left: 50%;transform: translate(-50%,0%);font-size: 25px;"></i>
-                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Usuario 6</p>
+                            <p class=" fuente1 mt-4 pt-3" style="position: absolute;left: 50%;transform: translate(-50%,0%);">Christopher Perez</p>
                         </div>
 
                     </div>
