--- a/html/carrito.html
+++ b/html/carrito.html
@@ -135,27 +135,28 @@
 
     <div style="height: 95px;"></div>
 
-    <!-- CARRITO DE COMPRAS -->
+    <!--=======================================================================================================================================-->
+    <!--CARRITO DE COMPRAS-->
+    <!--=======================================================================================================================================-->
     <div id="menu" class="container-fluid ">
         <div class="container px-0">
 
             <!-- Titulo -->
             <h3 class="fuente6 py-3">Shopping cart</h3>
 
-
             <div class="grid-carrito">
 
                 <!-- CARRITO -->
                 <div class="item-carrito">
 
-                    <table class="table table-bordered table-striped dt-responsive carrito">
+                    <table id="lista-carrito" class="table table-bordered table-striped dt-responsive carrito">
 
                         <thead>
 
                             <tr class="text-center">
 
 
-                                <th class="fuente6" style="font-size: 13px;">img</th>
+                                <th class="fuente6" style="font-size: 13px;width: 150px;">img</th>
                                 <th class="fuente6" style="font-size: 13px;">Tour</th>
                                 <th class="fuente6" style="font-size: 13px;">Days</th>
                                 <th class="fuente6" style="font-size: 13px;">Price</th>
@@ -168,7 +169,7 @@
 
                         <tbody>
 
-                            <tr>
+                            <!-- <tr>
 
                                 <td class=" py-2 px-1">
                                     <div class="" style="background-image: url(../img/top1.jpg);width: 60px;height: 60px;background-size: cover;background-position: center center;border-radius: 8px; box-shadow: 5px 5px 5px #8d8d8d;">
@@ -194,13 +195,12 @@
                                     </button>
                                 </td>
 
-                            </tr>
+                            </tr> -->
 
-                            <tr>
+                            <!-- <tr class="text-center">
 
-                                <td class=" py-2 px-1">
-                                    <div class="" style="background-image: url(../img/top2.png);width: 60px;height: 60px;background-size: cover;background-position: center center;border-radius: 8px; box-shadow: 5px 5px 5px #8d8d8d;">
-
+                                <td class="py-2 px-1" style="text-align: center;">
+                                    <div style="display: inline-block; text-align: center; background-image: url(../img/top2.png); width: 60px; height: 60px; background-size: cover; background-position: center center; border-radius: 8px; box-shadow: 5px 5px 5px #8d8d8d;">
                                     </div>
                                 </td>
 
@@ -222,14 +222,13 @@
                                     </button>
                                 </td>
 
-                            </tr>
+                            </tr> -->
 
                         </tbody>
 
                     </table>
 
                 </div>
-
 
                 <!-- FORMULARIO PARA RESERVAR -->
                 <div class="item-carrito mb-4 mt-sm-3 mt-md-0">
